--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 }
 
 
-
 body
 {
 	font-family: 'Raleway', sans-serif;
@@ -30,6 +29,8 @@ body a
 	font-weight: bold;
 }
 
+
+
 /* HEADER */
 
 header
@@ -44,14 +45,12 @@ header .logo
 	flex-grow: 1;
 }
 
-
 header nav
 {
 	font-size: 0.85em;
 	display: flex;
 	align-items: baseline;
 }
-
 
 header nav a:hover, 
 header nav a.active
@@ -67,8 +66,6 @@ header nav a
 	padding: 20px 0;
 }
 
-
-
 header .button
 {
 	border: none;
@@ -82,7 +79,7 @@ header .button
 
 
 
-/* TITRE */
+/* TITLE */
 
 main .section1 h1
 {
@@ -118,7 +115,6 @@ main #form
 	display: flex;
 }
 
-
 main #form label
 {
 	background-color: #F2F2F2;
@@ -129,19 +125,16 @@ main #form label
     padding-top: 7px;
 }
 
-
 main .fa-map-marker-alt
 {
 	font-size: 0.85em;
 }
-
 
 main #form input
 {
 	height: 35px;
 	border: 0.5px solid #F2F2F2;
 }
-
 
 main #recherche_bouton
 {
@@ -162,7 +155,17 @@ main .search-button
 
 
 
+
 /* FILTRES CONTENEUR */
+
+main .filtres p
+{
+	margin-right: 20px;
+	margin-bottom: 11px;
+	margin-top: 11px;
+	font-weight: bold;
+	font-size: 0.9em;
+}
 
 main .filtres
 {
@@ -181,14 +184,6 @@ main .regroupe2
 	display: flex;
 }
 
-main .filtres p
-{
-	margin-right: 20px;
-	margin-bottom: 11px;
-	margin-top: 11px;
-	font-weight: bold;
-	font-size: 0.9em;
-}
 
 
 
@@ -207,12 +202,9 @@ main .filter
 	margin-right: 25px;
 }
 
-main .filter_text
+main .filter:hover
 {
-	padding-right: 10px;
-	padding-left: 35px;
-	font-weight: bold;
-	font-size: 0.85em;
+	background-color: #cfcfcf;
 }
 
 main .filter i
@@ -231,26 +223,20 @@ main .filter i
     width: 36px;
 }
 
+main .filter_text
+{
+	padding-right: 10px;
+	padding-left: 35px;
+	font-weight: bold;
+	font-size: 0.85em;
+}
+
 main .filter_text:hover
 {
 	color: #0065FC;
 	margin-left: 15px;
 }
 
-main .filter:hover
-{
-	background-color: #cfcfcf;
-}
-
-
-main figure
-{
-	display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 40px;
-    margin-inline-end: 40px;
-}
 
 
 
@@ -261,14 +247,6 @@ main .logement
 {
 	display: flex;
 	align-items: baseline;
-}
-
-main .logement p
-{
-	margin-left: 8px;
-	font-size: 0.8em;
-	margin-top: 25px;
-	margin-bottom: 25px;
 }
 
 main .logement i
@@ -284,23 +262,19 @@ main .logement i
     justify-content: center;
 }
 
+main .logement p
+{
+	margin-left: 8px;
+	font-size: 0.8em;
+	margin-top: 25px;
+	margin-bottom: 25px;
+}
+
+
 
 
 
 /* SECTION 2 */
-
-
-main .fa-star
-{
-	font-size: 0.70em;
-	color: #0065FC;
-}
-
-main .grey
-{
-	color: #F2F2F2;
-}
-
 
 main #section2
 {
@@ -321,55 +295,12 @@ main #section2 h2
 	margin-top: 25px;
 }
 
-
-main #section2 p
-{
-	margin-left: 25px;
-	margin-top: 25px;
-	font-weight: bold;
-	font-size: 0.8em;
-}
-
-
-main #section2 figcaption
-{
-	padding-left: 10px;
-}
-
-
-main .name_accommodation
-{
-	margin-top: 5px;
-	font-weight: bold;
-	font-size: 0.80em;
-}
-
-main .price_accomodation
-{
-	font-size: 0.70em;
-    font-weight: normal;
-	margin-top: 5px;
-	color: black;
-}
-
 main .hebergement1
 {
 	display: flex;
 }
 
 main .hebergement1 i
-{
-	margin-top: 6px;
-}
-
-
-main .hebergement2
-{
-	display: flex;
-}
-
-
-main .hebergement2 i
 {
 	margin-top: 6px;
 }
@@ -391,6 +322,54 @@ main .photo img
 	border-radius: 10px 10px 0px 0px;
 }
 
+main #section2 figcaption
+{
+	padding-left: 10px;
+}
+
+main .name_accommodation
+{
+	margin-top: 5px;
+	font-weight: bold;
+	font-size: 0.80em;
+}
+
+main .price_accomodation
+{
+	font-size: 0.70em;
+    font-weight: normal;
+	margin-top: 5px;
+	color: black;
+}
+
+main .fa-star
+{
+	font-size: 0.70em;
+	color: #0065FC;
+}
+
+main .grey
+{
+	color: #F2F2F2;
+}
+
+main .hebergement2
+{
+	display: flex;
+}
+
+main .hebergement2 i
+{
+	margin-top: 6px;
+}
+
+main #section2 p
+{
+	margin-left: 25px;
+	margin-top: 25px;
+	font-weight: bold;
+	font-size: 0.8em;
+}
 
 
 
@@ -415,6 +394,14 @@ main .aside_conteneur h2
     text-align: center;
 	justify-content: space-around;
 	margin-top: 25px;
+	margin-bottom: 15px;
+}
+
+main .flex
+{
+	display: flex;
+	height: 105px;
+	margin-bottom: 22px;
 }
 
 main .aside figure
@@ -434,7 +421,6 @@ main .aside img
 	width: 100px;
 }
 
-
 main .aside figcaption
 {
 	margin-left: 15px;
@@ -443,12 +429,6 @@ main .aside figcaption
     justify-content: space-between;
 }
 
-main .flex
-{
-	display: flex;
-	height: 105px;
-	margin-bottom: 22px;
-}
 
 
 
@@ -460,42 +440,12 @@ main #section3
 	clear: both;
 }
 
-
 main #section3 h2
 {
  	padding-top: 40px;
  	margin-bottom: 0;
  	font-size: 1em;
     font-weight: bold;
-}
-
-
-main #conteneur
-{
-	display: flex;
-	justify-content: space-between;
-}
-
-
-main #section3 figcaption
-{
-	padding-top: 6px;
-	padding-bottom: 10px;
-	padding-left: 15px;
-}
-
-
-main .activite figure
-{
-	background-color: #f0f0f0;
-    border-radius: 18px;
-    margin-right: 0px;
-    margin-left: 25px;
-}
-
-main .activite img
-{
-	border-radius: 10px 10px 0px 0px;
 }
 
 
@@ -513,24 +463,16 @@ main .activite img
 	margin-bottom: 40px;
 }
 
+.bloc_grid a
+{
+	position: relative;
+}
 
 .bloc_grid img
 {
 	border-radius: 16px;
 	width: 100%;
 	height: 100%;
-}
-
-.bloc_grid a
-{
-	position: relative;
-}
-
-.items1
-{
-	grid-column: 1 / 1;
-  	grid-row: 1 / 4;
-	height: 330px;
 }
 
 .title_grid
@@ -547,6 +489,12 @@ main .activite img
 	box-shadow: 1px 1px 10px 0px #c5c5c5
 }
 
+.items1
+{
+	grid-column: 1 / 1;
+  	grid-row: 1 / 4;
+	height: 330px;
+}
 
 .items2
 {
@@ -586,15 +534,8 @@ main .activite img
 
 
 
+
 /* FOOTER */
-
-footer .pos
-{
-	display: flex;
-	width: 52.5%;
-	margin: auto;
-}
-
 
 footer .footer
 {
@@ -606,6 +547,12 @@ footer .footer
 	margin-bottom: 15px;
 }
 
+footer .pos
+{
+	display: flex;
+	width: 52.5%;
+	margin: auto;
+}
 
 footer .footer h3
 {
@@ -614,13 +561,11 @@ footer .footer h3
 	margin-bottom: 15px;
 }
 
-
 footer .footer a
 {
 	font-size: 0.9em;
 	margin-bottom: 8px;
 }
-
 
 footer .a_propos
 {
@@ -629,14 +574,12 @@ footer .a_propos
 	width: 33.33%;
 }
 
-
 footer .nos_hebergements
 {
 	display: flex;
 	flex-direction: column;
 	width: 33.33%;
 }
-
 
 footer .assistance
 {
