--- a/stylemobile.css
+++ b/stylemobile.css
@@ -60,7 +60,7 @@ header .button:hover
 	border-top: transparent;
 	padding-right: 20px;
 	padding-bottom: 0;
-	padding-top: 0;
+	padding-top: 2px;
 }
 
 
